tests/ui/errors/snapshots/equality_derivation_terminates_on_transforming_interface_cycle.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Recursive interface embedding
   ╭─[test.lis:6:11]
 5 │ 
 6 │ interface B<T> {
   ·           ┬
   ·           ╰── creates a cycle
 7 │   embed A<Slice<T>>
   ╰────
  help: Interface embedding cycle detected: B → A → B. Break the cycle by removing one of the embeddings · code: [infer.interface_cycle]
