tests/ui/errors/snapshots/equality_enum_rejects_function_payload.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot derive equality
   ╭─[test.lis:4:3]
 3 │ enum Action {
 4 │   Run(fn(int) -> int),
   ·   ─┬─
   ·    ╰── `Run` cannot be compared
 5 │   Stop,
   ╰────
  help: `#[equality]` cannot compare functions. Give `Action` a hand-written `equals` method, mark the field's type `#[equality]`, or remove the field · code: [attribute.cannot_derive_equality]
