tests/ui/errors/snapshots/equality_field_comparable_with_bound_mismatched_equals_rejected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot derive equality
    ╭─[test.lis:11:15]
 10 │ #[equality]
 11 │ struct Wrap { box: Box<int> }
    ·               ─┬─
    ·                ╰── `box` cannot be compared
    ╰────
  help: `#[equality]` cannot compare a type whose `equals` requires stricter bounds. Give `Wrap` a hand-written `equals` method, mark the field's type `#[equality]`, or remove the field · code: [attribute.cannot_derive_equality]
