tests/ui/errors/snapshots/equality_field_rejects_bound_mismatched_equals.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot derive equality
    ╭─[main.lis:11:15]
 10 │ #[equality]
 11 │ struct Wrap { box: Box<int> }
    ·               ─┬─
    ·                ╰── `box` cannot be compared
    ╰────
  help: `#[equality]` cannot compare a struct containing non-comparable fields. Give `Wrap` a hand-written `equals` method, mark the field's type `#[equality]`, or remove the field · code: [attribute.cannot_derive_equality]
